--- a/public/profile.html
+++ b/public/profile.html
@@ -504,7 +504,7 @@
 									</li>
 									<li id="menu-comunicacao" ><a href="#"><i class="fa fa-smile-o"></i> <span>More</span><span class="fa fa-angle-double-right" style="float: right"></span></a>
 									   <ul id="menu-comunicacao-sub" >
-										<li id="menu-mensagens" style="width:120px" ><a href="project.html">Projects <i class="fa fa-angle-right" style="float: right; margin-right: -8px; margin-top: 2px;"></i></a>
+										<li id="menu-mensagens" style="width:120px" ><a href="square.html">Projects <i class="fa fa-angle-right" style="float: right; margin-right: -8px; margin-top: 2px;"></i></a>
 										  <ul id="menu-mensagens-sub" >
 											<li id="menu-mensagens-enviadas" style="width:130px" ><a href="ribbon.html">Ribbons</a></li>
 											<li id="menu-mensagens-recebidas"  style="width:130px"><a href="blank.html">Blank</a></li>
